5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1649_1055.log
== TEST (2019-04-09 19:30:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vel=float(input("velocidade: "))
ang=float(input("angulo do vetor: "))
ace=float(input("aceleracao da gravidade: "))
r= (vel)**2*sin(2*ang)/ace


-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:46:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vel=float(input("velocidade: "))
ang=float(input("angulo do vetor: "))
distancia=float(input("distancia: "))
ace=9.8
r= (  ((vel)**2)  *  sin(2*   radians(ang)  )  )  /ace
if(abs(distancia-r) <0.1 ):
	mensagem="sim"
	print(mensagem)
else:
	mensagem"nao"
	print(mensagem)
	

-- ERROR:
File "XXXX", line 14
    mensagem"nao"
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:46:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vel=float(input("velocidade: "))
ang=float(input("angulo do vetor: "))
distancia=float(input("distancia: "))
ace=9.8
r= (  ((vel)**2)  *  sin(2*   radians(ang)  )  )  /ace
if(abs(distancia-r) <0.1 ):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
	

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:47:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
vel=float(input("velocidade: "))
ang=float(input("angulo do vetor: "))
distancia=float(input("distancia: "))
ace=9.8
r= (  ((vel)**2)  *  sin(2*   radians(ang)  )  )  /ace
if(abs(distancia-r) <0.1 ):
	mensagem="sim"
	print(mensagem)
else:
	mensagem="nao"
	print(mensagem)
	

-- EXECUTION TIME:
0.136098
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
